2010-07-16  James Hawkins  <jhawkins@chromium.org>

        Reviewed by Darin Fisher.

        [Chromium] Implement WebFormElement::wasUserSubmitted(). This is used to
        verify that the user submitted the form instead of JS when saving form
        data in AutoFill.
        https://bugs.webkit.org/show_bug.cgi?id=42479

        * public/WebFormElement.h:
        * src/WebFormElement.cpp:
        (WebKit::WebFormElement::wasUserSubmitted):

2010-07-20  Daniel Erat  <derat@chromium.org>

        Reviewed by Ojan Vafai.

        Subpixel rendering always disabled for Chromium Linux
        https://bugs.webkit.org/show_bug.cgi?id=42220

        Honor Fontconfig subpixel rendering setting on Chromium Linux.

        * src/gtk/WebFontInfo.cpp:
        (WebKit::WebFontInfo::renderStyleForStrike):

2010-07-20  Darin Fisher  <darin@chromium.org>

        Fix Chromium build bustage.

        * src/ResourceHandle.cpp:
        (WebCore::ResourceHandle::hasAuthenticationChallenge): Add
        implementation of this method that always returns false.

2010-07-20  Darin Fisher  <darin@chromium.org>

        Reviewed by Jian Li.

        [Chromium] Add interface for downloading to a file.  This can be used
        in the future to support XMLHttpRequest.responseBlob, but it also
        serves a use case in Chromium.

        https://bugs.webkit.org/show_bug.cgi?id=42657

        * public/WebURLLoaderClient.h:
        (WebKit::WebURLLoaderClient::willSendRequest):
        (WebKit::WebURLLoaderClient::didSendData):
        (WebKit::WebURLLoaderClient::didReceiveResponse):
        (WebKit::WebURLLoaderClient::didDownloadData):
        (WebKit::WebURLLoaderClient::didReceiveData):
        (WebKit::WebURLLoaderClient::didFinishLoading):
        (WebKit::WebURLLoaderClient::didFail):
        * public/WebURLRequest.h:
        * public/WebURLResponse.h:
        * src/WebURLRequest.cpp:
        (WebKit::WebURLRequest::downloadToFile):