@@ -1,3 +1,13 @@
+2010-07-21  Yury Semikhatsky  <yurys@chromium.org>
+
+        Reviewed by Pavel Feldman.
+
+        Web Inspector: should be possible to debug inspector
+        https://bugs.webkit.org/show_bug.cgi?id=42730
+
+        * src/WebDevToolsFrontendImpl.cpp:
+        (WebKit::WebDevToolsFrontendImpl::WebDevToolsFrontendImpl):
+
 2010-07-16  James Hawkins  <jhawkins@chromium.org>
 
         Reviewed by Darin Fisher.
